fix: #132 .toList() 제거